# django-editor-js

./: .coverage  .coveragerc  .gitignore  README.md  pyproject.toml  run_demo.bat  run_demo.sh  tasks.py
.github/workflows/: ci.yml
django_editor_js.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
django_editorjs_fields.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
docs/: requirements.txt
docs/source/: conf.py  configuration.rst  demo.rst  index.rst  installation.rst  usage.rst
editor_js/: config.py  fields.py  renderers.py  urls.py  views.py  widgets.py
editor_js/static/editor_js/js/: editor_js_iframe.js  editor_js_widget.js
editor_js/templates/editor_js/: editor_js_iframe.html  editorjs_iframe.html
editor_js/templates/editor_js/admin/widgets/: editor_js_widget.html  editorjs_widget.html
editor_js/templatetags/: editor_js_filters.py
example/: manage.py  requirements.txt
example/blog/: models.py
example/blog/migrations/: 0001_initial.py  0002_post_summary.py  0003_alter_post_body_alter_post_summary.py
example/example/: settings.py  urls.py  wsgi.py
tests/: runtests.py  test_fields.py  test_renderers.py  test_views.py
tests/test_app/: models.py
